--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 MONGODB_URL = "mongodb+srv://baljimaurya:baljikushwaha@balji.nuicddg.mongodb.net/cruds"
+
+API_URL=http://127.0.0.1:3000
+
+# SMTP Configuration
+SMTP_HOST = smtp-relay.brevo.com
+SMTP_PORT = 587
+SMTP_USER = genius.abhishek.sir@gmail.com
+EMAIL_FROM = genius.abhishek.sir@gmail.com
+EMAIL_TO = dewepoh529@molyg.com
+SMTP_PASSWORD = W4EBT3YaZkwqfOQz
+SMTP_SECURE = false
