--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/button": "0.0.14",
+    "@react-email/components": "0.0.15",
+    "@react-email/html": "0.0.7",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -20,6 +24,7 @@
     "nodemailer": "^6.9.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "tailwind-merge": "^2.2.1",
