--- a/package.json
+++ b/package.json
@@ -41,5 +41,20 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "description": "CRUDS Operations is a set of operations that are used to create, read, update, delete and send data. It is a basic set of operations that are used in most of the software applications.",
+  "main": "postcss.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abhishekkushwahaa/cruds-operation.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abhishekkushwahaa/cruds-operation/issues"
+  },
+  "homepage": "https://github.com/abhishekkushwahaa/cruds-operation#readme"
 }
